force-app/main/default/staticresources/python/Disappear/src/objects/ProdIndObjSciStatement__c.object
<CustomObject>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox for Salesforce UI to communicate with backend
please do not store any data in this field</description>
        <label>IsSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Indication_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Indication Objective</label>
        <referenceTo>ProdIndiObjective__c</referenceTo>
        <relationshipLabel>Scientific Statements</relationshipLabel>
        <relationshipName>Scientific_Statements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScientificStatement__c</fullName>
        <label>ScientificStatement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScientificStatement_no__c</fullName>
        <label>ScientificStatement Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <label>SiebelRowId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <label>Scientific Statement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Indication_Objective__c</columns>
        <columns>ScientificStatement_no__c</columns>
        <columns>ScientificStatement__c</columns>
        <columns>SiebelRowId__c</columns>
        <columns>IsLogicallyDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ProdIndObjSciStatement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scientific Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>